[gd_scene load_steps=13 format=3 uid="uid://ci36jx3vvoocj"]

[ext_resource type="Script" path="res://entities/ennemies/mob-1/mob-1.gd" id="1_hsysf"]
[ext_resource type="Texture2D" uid="uid://bvkjjs72fxg4x" path="res://entities/ennemies/mob-1/mob-1-dead.png" id="1_qppga"]
[ext_resource type="Texture2D" uid="uid://bceetuo4sphb" path="res://entities/ennemies/mob-1/mob-1-hurt.png" id="2_uknuq"]
[ext_resource type="Texture2D" uid="uid://curemujf2tqhp" path="res://entities/ennemies/mob-1/mob-1-walk.png" id="3_sy8iv"]
[ext_resource type="PackedScene" uid="uid://cl0vk4malih5v" path="res://components/healthbar/HealthComponent.tscn" id="4_nrwle"]

[sub_resource type="AtlasTexture" id="AtlasTexture_45qg2"]
atlas = ExtResource("1_qppga")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tiurt"]
atlas = ExtResource("2_uknuq")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahbay"]
atlas = ExtResource("2_uknuq")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mska"]
atlas = ExtResource("3_sy8iv")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_brvno"]
atlas = ExtResource("3_sy8iv")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_cyjhj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_45qg2")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tiurt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahbay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tiurt")
}],
"loop": false,
"name": &"hurt",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mska")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_brvno")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_a4ja4"]
radius = 15.0

[node name="Mob-1" type="CharacterBody2D"]
scale = Vector2(2, 2)
collision_layer = 2
collision_mask = 14
script = ExtResource("1_hsysf")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -16)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_cyjhj")
animation = &"hurt"
autoplay = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -14)
shape = SubResource("CircleShape2D_a4ja4")

[node name="Health" parent="." instance=ExtResource("4_nrwle")]
unique_name_in_owner = true
position = Vector2(0, -46)
max_health = 3.0
current_health = 3.0

[node name="DeathTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="depleted" from="Health" to="." method="_on_health_depleted"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
